<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">


    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="290dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="false"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#D3D3D3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAllClear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/AllClear"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Clear"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPercent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Percent"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/btnDivide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Divide"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Seven"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Eight"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Nine"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Multiply"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Four"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Five"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Six"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Minus"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/One"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Two"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNo3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Three"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Add"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Zero"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Dot"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/Equal"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>